--- a/styles.css
+++ b/styles.css
@@ -73,11 +73,19 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    margin-top: 0px;
     
 }
+.products-grid-bests {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; 
+    gap: 2px;
+    padding-bottom: 1rem;
+}
+
  .bestseller h2, .h22 {
     margin: 0;
-    color: #F5F5F5;
+    color: #150404;
     font-size: 50px;
 }
 .main_shopnow:hover {
@@ -203,7 +211,7 @@ body {
 
 .product-card {
     flex: 0 0 auto;
-    width: 300px; /* or whatever fixed width you want */
+    width: 370px; 
     scroll-snap-align: start;
     background: var(--white);
     border-radius: 8px;
@@ -214,7 +222,7 @@ body {
 
 .product-image {
     width: 100%;
-    height: 250px;
+    height: 450px;
     object-fit: cover;
 }
  
